--- a/portfolio/src/components/ProjectCard/style.css
+++ b/portfolio/src/components/ProjectCard/style.css
@@ -4,6 +4,7 @@
 }
 
 .flip-card {
+  margin: ;
   width: 320px;
   height: 220px;
   perspective: 1000px;
@@ -32,7 +33,7 @@
 }
 
 #front {
-  background-color: #9ca8b177;
+  background-color: rgba(255, 255, 255, 0.788);
   color: black;
 }
 
