--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,11 @@
 body {
   font-family: 'PT Sans Caption', sans-serif;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   background-color: black;
   color: white;
+  opacity: 0; 
+  transition: opacity 3s; 
 }
 
 a {
@@ -16,9 +18,23 @@ a:hover{
 }
 
 .about-text{
+  font-size: large;
   max-width:  70%;
   height: auto;
   margin: auto;
   margin-top: 30%;
   justify-content: center;
+}
+
+.fade-in-section {
+  opacity: 0;
+  transform: translateY(20vh);
+  visibility: hidden;
+  transition: opacity 1200ms ease-out, transform 1200ms ease-out, visibility 1200ms ease-out;
+  will-change: opacity, transform, visibility;
+}
+.fade-in-section.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
 }
