--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -4,5 +4,13 @@
 
 li {
     text-decoration: none;
-    font-size: 22px;
 }
+
+.nav-item{
+    font-size: 17.5px;
+}
+
+/* #flex{
+    display: flex; 
+    justify-content: space-between;
+} */
